--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   google_maps_flutter: ^2.5.0
   geolocator: ^10.1.0
   geocoding: ^2.1.1
+  like_button: ^2.0.5
+  simple_gradient_text: ^1.2.4
 
 dev_dependencies:
   flutter_test:
