--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   geocoding: ^2.1.1
   like_button: ^2.0.5
   simple_gradient_text: ^1.2.4
+  lottie: ^2.6.0
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/icon/icon_transparent.png
+     - assets/animated_icon/loading.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
