update profile page and add share functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   like_button: ^2.0.5
   simple_gradient_text: ^1.2.4
   lottie: ^2.6.0
+  share_plus: ^7.2.1
 
 dev_dependencies:
   flutter_test:
