--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,6 @@ dependencies:
   firebase_core: ^2.22.0
   firebase_auth: ^4.13.0
   cloud_firestore: ^4.13.0
-  firebase_analytics: ^10.6.4
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
@@ -51,6 +50,8 @@ dependencies:
   simple_gradient_text: ^1.2.4
   lottie: ^2.6.0
   share_plus: ^7.2.1
+  image_picker: ^1.0.4
+  firebase_storage: ^11.5.2
 
 dev_dependencies:
   flutter_test:
