--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   share_plus: ^7.2.1
   image_picker: ^1.0.4
   firebase_storage: ^11.5.2
+  easy_image_viewer: ^1.2.1
 
 dev_dependencies:
   flutter_test:
