--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   firebase_storage: ^11.5.2
   easy_image_viewer: ^1.2.1
   uuid: ^4.2.1
+  url_launcher: ^6.1.14
 
 dev_dependencies:
   flutter_test:
