--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   uuid: ^4.2.1
   url_launcher: ^6.1.14
   fluttertoast: ^8.2.4
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +84,7 @@ flutter:
   assets:
      - assets/icon/icon_transparent.png
      - assets/animated_icon/loading.json
+     - assets/image/google.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
