update all changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,10 +58,14 @@ dependencies:
   fluttertoast: ^8.2.4
   google_sign_in: ^6.1.6
   http: ^1.1.0
+  intl: ^0.18.1
+  flutter_native_splash: ^2.3.6
+  flutter_tts: ^3.8.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -69,6 +73,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+flutter_native_splash:
+  image: assets/icon/icon_transparent.png
+  color: "#FFFFFF"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
